# Armstrong-Learning-to-Grasp

./: .gitignore  FOXGLOVE_COMPLETE_GUIDE.md  FOXGLOVE_QUICK_FIX.md  FOXGLOVE_SETUP.md  PRACTICAL_SOLUTION.md  README.md  SETUP_STATUS.md  SIMULATION_COMMANDS.md  SOLUTIONS.md  WORKING_GUIDE.md  XQUARTZ_TROUBLESHOOTING.md  check_markers.sh  create_standalone_ur5.sh  demo_pick_place_sequence.sh  diagnose_simulation.sh  docker-compose-sim.yml  docker-compose.yml  install_ros2_macos.sh  launch_moveit_manual.sh  quick_start.sh  run_experiment.sh  setup_macos_gui.sh  setup_native_ros2.sh  start_headless_gazebo.sh  start_pick_place_demo.sh  start_simulation.sh  start_with_foxglove.sh  test_basic.sh  test_manual_nodes.sh  test_robot_movement.sh  test_setup.sh  test_simple.sh  test_xquartz.sh  verify_setup.py
workspace/: requirements.txt  simple_arm_mover.py  simple_joint_controller.py
workspace/install/ur5_gazebo/share/ur5_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/ur5_gazebo/share/ur5_gazebo/launch/: ur5.launch.py
workspace/install/ur5_gazebo/share/ur5_gazebo/urdf/: ur5.urdf.xacro
workspace/install/ur5_gazebo/share/ur5_gazebo/worlds/: pick_place_world.world
workspace/install/ur5_moveit_config/share/ur5_moveit_config/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
workspace/install/ur5_moveit_config/share/ur5_moveit_config/config/: moveit.rviz  ompl_planning.yaml
workspace/log/: latest_build
workspace/src/bc_training/: package.xml  setup.py
workspace/src/bc_training/bc_training/: train_policy.py
workspace/src/ur5_gazebo/: CMakeLists.txt  package.xml  setup.py
workspace/src/ur5_gazebo/scripts/: camera_detector.py  demo_recorder.py  environment_visualizer.py
workspace/src/ur5_gazebo/ur5_gazebo/: environment_visualizer.py  pick_place_controller.py  simple_pick_place.py
workspace/src/ur5_gazebo/urdf/: ur5.urdf.xacro
workspace/src/ur5_moveit_config/: CMakeLists.txt  package.xml  setup.py
workspace/src/ur5_moveit_config/config/: joint_limits.yaml  ur5.srdf
workspace/src/ur5_moveit_config/launch/: moveit.launch.py  rviz.launch.py
