<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_moveit_config</name>
  <version>0.0.0</version>
  <description>UR5 MoveIt2 configuration package</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_warehouse</depend>
  <depend>moveit_ros_benchmarks</depend>
  <depend>moveit_ros_robot_interaction</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_occupancy_map_monitor</depend>
  <depend>moveit_ros_control_interface</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>